--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         body {
             font-family: Arial, sans-serif;
             margin: 20px; 
+            background-color: rgba(13, 119, 211, 0.527);
         }
         .calculator {
             max-width: 600px;
